# zzz-proj-stub--simple-banking-system

./: README.rst  pyproject.toml
banking/: banking.py  messages.py
